# CurveBall

./: Cargo.toml  build.rs
src/: icosphere.rs  main.rs  shaders.rs  vertex.rs
src/shaders/: fragment.glsl  vertex.glsl
